trunk/Archive2/89/3657c9801bc0f5/output
main.cpp:1:3: error: invalid preprocessing directive
# Include <iostream> 
  ^
main.cpp:6:26: error: expected unqualified-id
[ [ noreturn ] ]  void ( int po<U+010D><U+00ED>ta<U+0165> )  
                         ^
main.cpp:6:26: error: expected ')'
main.cpp:6:24: note: to match this '('
[ [ noreturn ] ]  void ( int po<U+010D><U+00ED>ta<U+0165> )  
                       ^
main.cpp:15:11: error: use of undeclared identifier 'počet'
    ak  ( po<U+010D>et ! =  9 )  { ( po<U+010D>et ) ;   / / To sp<U+00F4>sob<U+00ED> setjmp () ukon<U+010D><U+00ED>te 
          ^
main.cpp:15:26: error: expected ';' at end of declaration
    ak  ( po<U+010D>et ! =  9 )  { ( po<U+010D>et ) ;   / / To sp<U+00F4>sob<U+00ED> setjmp () ukon<U+010D><U+00ED>te 
                               ^
                               ;
5 errors generated.
